fix: Correct payload for initiating processes in tests
Refactored `CDU05IntegrationTest.java` and `ProcessoControllerTest.java` to send the `IniciarProcessoReq` DTO in the request body instead of a simple list of unit IDs. This aligns the tests with the updated API signature for the `/api/processos/{codigo}/iniciar` endpoint, resolving the HTTP 400 Bad Request errors.